CAMBIO DE NOMBRE

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <p style="
     margin-left: 800px;"
     >
-    Diana Fernandez - Directora
+    Ain Ran - Directora
     </p>
     <p style="
     margin-left: 800px;"
