--- a/inicio.html
+++ b/inicio.html
@@ -24,13 +24,13 @@
     style="
     margin-left: 500px;">
     
-    <a href="./gatos.html">Gatos</a>
+    <a href="./gatos/gatos.html">Gatos</a>
 
     <img src="https://fotografias.lasexta.com/clipping/cmsimages01/2017/02/07/364CAAAC-A60E-43BB-8FED-05AA0B8F3AF9/58.jpg" alt="Perros" width="375" style="
     margin-left: 100px;
     margin-top: 100px;
     ">
-    <a href="./perros.html">Perros</a>
+    <a href="./perros/perros.html">Perros</a>
 
 
 </body>
