--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section>
-        <nav>
+        <nav class="navegacion">
             <ul>
                 <li><a href="./inicio.html">Inicio</a></li>
                 <li><a href="./nosotros.html">Nosotros</a></li>
